--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -16,7 +16,6 @@ body {
 .far.fa-user-circle {
     font-size: 29px;
     color: #726f6f;
-    padding-top: 10px;
 }
 .input-10 {
     width: 40px;
@@ -113,7 +112,7 @@ form.example::after {
     padding: 10px 10px;
 }
 #navbar {
-    width: 20%;
+    width: 100%; /* Установите ширину 100% */
     background-color: #21214e !important;
     height: 50px;
     border: none;
@@ -133,11 +132,14 @@ form.example::after {
     color: white;
 }
 #navbar2 {
-    width: 80%;
+    width: 100%; /* Установите ширину 100% */
+}
+#sidebar-container {
+    padding: 0; /* Убираем отступы */
 }
 #navbar-items {
-    width: 20%;
-    height: 500px;
+    width: 100%; /* Установите ширину 100% */
+    height: calc(100vh - 50px); /* Учитываем высоту верхней части */
     background-color: #4f4f8a;
 }
 ul#navbar-items li {
@@ -177,6 +179,10 @@ ul li:hover .fas {
 }
 .example {
     width: 50%;
+}
+.navbar-icon {
+    color: #b6b5b5; /* Устанавливаем цвет иконки */
+    font-size: 16px; /* Устанавливаем размер иконки */
 }
 @media(max-width:780px) {
     #navbar {
