--- a/web/css/site.css
+++ b/web/css/site.css
@@ -242,3 +242,16 @@ html, body {
     height: 100%;
     margin: 0;
 }
+
+
+/* Настройка размеров изображений */
+.carousel-item img {
+    max-height: 600px;
+    object-fit: contain;
+}
+
+/* Настройка миниатюр */
+.img-thumbnail {
+    height: 100px;
+    object-fit: cover;
+}
