--- a/web/css/site.css
+++ b/web/css/site.css
@@ -298,3 +298,37 @@ html, body {
 .file-input-item:last-child {
     margin-right: 0;
 }
+
+.photo-count-circle {
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    background-color: #17a2b8;
+    color: #fff;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 24px;
+    font-weight: bold;
+    font-size: 14px;
+}
+
+/* Стили для выпадающих списков фильтров */
+.grid-view .filters select {
+    width: 100%;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #fff;
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+
+.grid-view .filters input {
+    width: 100%;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #fff;
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
