--- a/web/css/site.css
+++ b/web/css/site.css
@@ -332,3 +332,38 @@ html, body {
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
     transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
+
+.thumbnail-container {
+    position: relative;
+    text-align: center;
+    margin-bottom: 20px; /* Добавим отступ снизу */
+}
+
+.thumbnail-info {
+    margin-top: 5px; /* Добавим отступ сверху */
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.thumbnail-date {
+    margin-right: 10px; /* Добавим отступ справа */
+}
+
+.thumbnail-delete {
+    color: red;
+    cursor: pointer;
+}
+
+.thumbnail-delete:hover {
+    text-decoration: underline;
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    filter: invert(1);
+}
